# assoc-list

./: README.md  cabal.project  hie.yaml  license.txt  stack.yaml
.github/workflows/: test.hs  test.yml
assoc-list/: README.md  assoc-list.cabal  changelog.md
assoc-list/src/Data/AssocList/: Exception.hs
assoc-list/src/Data/AssocList/List/: Comparison.hs  Concept.hs  Eq.hs  Equivalence.hs  Ord.hs  Predicate.hs  Type.hs
assoc-list/test/: doctest.hs  hedgehog.hs  test-with-hedgehog.hs
assoc-listlike/: README.md  assoc-listlike.cabal  changelog.md
assoc-listlike/src/Data/AssocList/ListLike/: Comparison.hs  Concept.hs  Eq.hs  Equivalence.hs  Ord.hs  Predicate.hs
assoc-listlike/test/: doctest.hs  test-with-hedgehog.hs
configurations/: ghc-8.0.project  ghc-8.10.project  ghc-8.2.project  ghc-8.4.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
