name: assoc-list
version: 0.1.0.0
category: Data

synopsis: Association lists

description: An association list conceptually signifies
             a mapping, but is represented as a list
             (of key-value pairs).

homepage:    https://github.com/typeclasses/assoc-list
bug-reports: https://github.com/typeclasses/assoc-list/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2018 Typeclass Consulting, LLC
license: MIT
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/typeclasses/assoc-list

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , contravariant
  exposed-modules:
      Data.AssocList.Exception
    , Data.AssocList.List.Eq
    , Data.AssocList.List.Equivalence
    , Data.AssocList.List.Predicate
    , Data.AssocList.List.Type

test-suite doctest
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: doctest.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , doctest

test-suite hedgehog
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: hedgehog.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      assoc-list
    , base >=4.7 && <5
    , doctest
    , hedgehog
